Add *Response schemas in spec
